--- a/css.html
+++ b/css.html
@@ -32,7 +32,7 @@
             margin: 0;
         }      
         div {
-            background: red;
+            background: blue;
             border: 5px solid black;
         }
         
