--- a/css.html
+++ b/css.html
@@ -33,7 +33,7 @@
         }      
         div {
             background: blue;
-            border: 5px solid black;
+            border: 10px solid green;
         }
         
         .child {
